tests/health/gold/sdk/tests__boolean-types-test.toit.gold
tests/boolean-types-test.toit:7:7: error: Unresolved type: 'True'
foo x/True:
      ^~~~
tests/boolean-types-test.toit:8:7: error: Unresolved type: 'False'
bar x/False:
      ^~~~~
tests/boolean-types-test.toit:9:9: error: Unresolved type: 'True'
gee1 -> True:
        ^~~~
tests/boolean-types-test.toit:12:9: error: Unresolved type: 'False'
gee2 -> False:
        ^~~~~
tests/boolean-types-test.toit:16:9: error: Unresolved type: 'True'
global1/True := true
        ^~~~
tests/boolean-types-test.toit:17:9: error: Unresolved type: 'False'
global2/False := false
        ^~~~~
